update and backend

--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -14,8 +14,7 @@
     "country": "País",
     "city": "Ciudad de origen",
     "tastes": "Gustos (separados por comas)",
-    "saveAndContinue": "Guardar y continuar"
-  ,
+    "saveAndContinue": "Guardar y continuar",
     "email": "Correo electrónico",
     "password": "Contraseña",
     "signIn": "Iniciar sesión",
@@ -26,8 +25,17 @@
     "loginLink": "Inicia sesión",
     "or": "O",
     "createAccount": "Crear Cuenta"
-  }
-  ,
+  },
+  "navigation": {
+    "home": "Inicio",
+    "alerts": "Alertas",
+    "itinerary": "Itinerario",
+    "destinations": "Destinos",
+    "history": "Historial",
+    "profile": "Mi Perfil",
+    "settings": "Configuración",
+    "logout": "Cerrar Sesión"
+  },
   "login": {
     "title": "Bienvenido a Rutopia",
     "subtitle": "Inicia sesión para continuar",
@@ -47,6 +55,250 @@
     "createAccount": "Crear Cuenta",
     "haveAccount": "¿Ya tienes una cuenta?",
     "loginLink": "Inicia Sesión"
+  },
+  "home": {
+    "welcomeTitle": "Bienvenido a",
+    "welcomeHighlight": "Rutopia",
+    "welcomeSubtitle": "Tu compañero de viaje inteligente para explorar el mundo de manera segura y personalizada.",
+    "quickActionsTitle": "Acciones Rápidas",
+    "planTrip": "Planificar Viaje",
+    "planTripDesc": "Crea un itinerario personalizado",
+    "checkAlerts": "Ver Alertas",
+    "checkAlertsDesc": "Revisa alertas de seguridad",
+    "exploreDestinations": "Explorar Destinos",
+    "exploreDestinationsDesc": "Descubre lugares increíbles",
+    "myTripsTitle": "Mis Viajes",
+    "upcomingTrip": "Próximo Viaje",
+    "currentTrip": "Viaje Actual",
+    "noTrips": "No tienes viajes planificados",
+    "createFirstTrip": "Crear mi primer viaje",
+    "recentAlertsTitle": "Alertas Recientes",
+    "viewAllAlerts": "Ver todas las alertas",
+    "noAlertsNearby": "No hay alertas cerca de tu ubicación",
+    "travelTipsTitle": "Consejos de Viaje",
+    "tip1": "Mantén siempre una copia digital de tus documentos",
+    "tip2": "Revisa las alertas locales antes de salir",
+    "tip3": "Comparte tu itinerario con familiares",
+    "footer": "Todos los derechos reservados"
+  },
+  "alerts": {
+    "title": "Alertas de",
+    "titleHighlight": "Seguridad",
+    "subtitle": "Mantente informado sobre zonas con problemas de tráfico, fenómenos naturales o situaciones de seguridad en tiempo real.",
+    "notificationSettings": "Configuración de Notificaciones",
+    "notificationDesc": "Activa o desactiva las alertas según tus preferencias",
+    "notifications": "Notificaciones",
+    "traffic": "Tráfico",
+    "trafficDesc": "Alertas sobre congestiones viales y accidentes",
+    "naturalPhenomena": "Fenómenos Naturales",
+    "naturalDesc": "Alertas sobre terremotos, huracanes, etc.",
+    "security": "Seguridad",
+    "securityDesc": "Alertas sobre zonas de riesgo",
+    "active": "Activo",
+    "inactive": "Inactivo",
+    "recentAlertsTitle": "Alertas Recientes",
+    "mapTitle": "Mapa de Zonas de Alerta",
+    "filterAlerts": "Filtrar Alertas",
+    "trafficFilter": "🚗 Tráfico",
+    "naturalFilter": "🌊 Fenómenos Naturales",
+    "securityFilter": "⚠️ Seguridad",
+    "myLocation": "Ir a mi ubicación",
+    "severityLegend": "Leyenda de Colores por Severidad",
+    "high": "Alta - Crítico",
+    "medium": "Media - Moderado",
+    "low": "Baja - Leve",
+    "trafficInfo": "Congestiones, accidentes y cierres viales",
+    "naturalInfo": "Sismos, lluvias intensas e inundaciones",
+    "securityInfo": "Zonas de riesgo y actividad sospechosa",
+    "createAlert": "Crear Nueva Alerta",
+    "alertTitle": "Título",
+    "alertDescription": "Descripción",
+    "alertType": "Tipo de Alerta",
+    "alertSeverity": "Severidad",
+    "alertLocation": "Ubicación",
+    "coordinates": "Coordenadas",
+    "address": "Dirección (opcional)",
+    "cancel": "Cancelar",
+    "create": "Crear Alerta",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "save": "Guardar",
+    "confirmDelete": "¿Estás seguro de que quieres eliminar esta alerta?",
+    "yes": "Sí",
+    "no": "No"
+  },
+  "itinerary": {
+    "title": "Mi",
+    "titleHighlight": "Itinerario",
+    "subtitle": "Planifica tu viaje perfecto con recomendaciones personalizadas y alertas en tiempo real.",
+    "currentTrip": "Viaje Actual",
+    "upcomingTrips": "Próximos Viajes",
+    "noCurrentTrip": "No tienes un viaje activo",
+    "startPlanning": "Comenzar a planificar",
+    "createItinerary": "Crear Nuevo Itinerario",
+    "tripName": "Nombre del Viaje",
+    "destination": "Destino",
+    "startDate": "Fecha de Inicio",
+    "endDate": "Fecha de Fin",
+    "travelers": "Número de Viajeros",
+    "budget": "Presupuesto",
+    "interests": "Intereses",
+    "createTrip": "Crear Viaje",
+    "editTrip": "Editar Viaje",
+    "deleteTrip": "Eliminar Viaje",
+    "tripDetails": "Detalles del Viaje",
+    "addActivity": "Agregar Actividad",
+    "activities": "Actividades",
+    "day": "Día",
+    "time": "Hora",
+    "activity": "Actividad",
+    "location": "Ubicación",
+    "notes": "Notas",
+    "status": "Estado",
+    "pending": "Pendiente",
+    "completed": "Completado",
+    "cancelled": "Cancelado"
+  },
+  "recommendations": {
+    "title": "Destinos",
+    "titleHighlight": "Recomendados",
+    "subtitle": "Descubre lugares increíbles basados en tus preferencias y experiencias de otros viajeros.",
+    "popularDestinations": "Destinos Populares",
+    "personalizedForYou": "Personalizado para Ti",
+    "trendingNow": "Tendencia Ahora",
+    "exploreAll": "Explorar Todo",
+    "basedOnPreferences": "Basado en tus preferencias",
+    "rating": "Calificación",
+    "reviews": "reseñas",
+    "startingFrom": "Desde",
+    "viewDetails": "Ver Detalles",
+    "addToItinerary": "Agregar al Itinerario",
+    "filterBy": "Filtrar por",
+    "all": "Todos",
+    "adventure": "Aventura",
+    "culture": "Cultura",
+    "relaxation": "Relajación",
+    "nature": "Naturaleza",
+    "food": "Gastronomía",
+    "sortBy": "Ordenar por",
+    "popularity": "Popularidad",
+    "price": "Precio",
+    "destination": "Destino",
+    "duration": "Duración",
+    "difficulty": "Dificultad",
+    "easy": "Fácil",
+    "moderate": "Moderado",
+    "challenging": "Desafiante"
+  },
+  "history": {
+    "title": "Mi",
+    "titleHighlight": "Historial",
+    "subtitle": "Revive tus aventuras pasadas y lleva un registro de todos tus viajes.",
+    "completedTrips": "Viajes Completados",
+    "totalTrips": "Total de Viajes",
+    "countriesVisited": "Países Visitados",
+    "totalDistance": "Distancia Total",
+    "favoriteDestination": "Destino Favorito",
+    "noTripsYet": "Aún no has completado ningún viaje",
+    "startExploring": "Comienza a explorar",
+    "tripMemories": "Recuerdos del Viaje",
+    "photos": "Fotos",
+    "reviews": "Reseñas",
+    "expenses": "Gastos",
+    "shareTrip": "Compartir Viaje",
+    "downloadReport": "Descargar Reporte",
+    "tripDuration": "Duración del Viaje",
+    "days": "días",
+    "viewTrip": "Ver Viaje",
+    "addReview": "Agregar Reseña",
+    "editReview": "Editar Reseña",
+    "rating": "Calificación",
+    "comment": "Comentario",
+    "submit": "Enviar",
+    "tripStats": "Estadísticas del Viaje",
+    "achievements": "Logros",
+    "firstTrip": "Primer Viaje",
+    "adventurer": "Aventurero",
+    "explorer": "Explorador",
+    "globetrotter": "Trotamundos"
+  },
+  "profile": {
+    "title": "Mi Perfil",
+    "personalInfo": "Información Personal",
+    "preferences": "Preferencias",
+    "security": "Seguridad",
+    "notifications": "Notificaciones",
+    "name": "Nombre",
+    "email": "Correo Electrónico",
+    "phone": "Teléfono",
+    "birthdate": "Fecha de Nacimiento",
+    "country": "País",
+    "city": "Ciudad",
+    "bio": "Biografía",
+    "interests": "Intereses",
+    "languages": "Idiomas",
+    "travelStyle": "Estilo de Viaje",
+    "budget": "Presupuesto Preferido",
+    "accommodation": "Alojamiento Preferido",
+    "transportation": "Transporte Preferido",
+    "changePassword": "Cambiar Contraseña",
+    "currentPassword": "Contraseña Actual",
+    "newPassword": "Nueva Contraseña",
+    "confirmPassword": "Confirmar Contraseña",
+    "save": "Guardar",
+    "cancel": "Cancelar",
+    "edit": "Editar",
+    "emailNotifications": "Notificaciones por Email",
+    "pushNotifications": "Notificaciones Push",
+    "smsNotifications": "Notificaciones SMS",
+    "profilePicture": "Foto de Perfil",
+    "uploadPhoto": "Subir Foto",
+    "removePhoto": "Eliminar Foto"
+  },
+  "common": {
+    "loading": "Cargando...",
+    "error": "Error",
+    "success": "Éxito",
+    "warning": "Advertencia",
+    "info": "Información",
+    "confirm": "Confirmar",
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "create": "Crear",
+    "update": "Actualizar",
+    "search": "Buscar",
+    "filter": "Filtrar",
+    "sort": "Ordenar",
+    "close": "Cerrar",
+    "open": "Abrir",
+    "yes": "Sí",
+    "no": "No",
+    "ok": "Aceptar",
+    "back": "Atrás",
+    "next": "Siguiente",
+    "previous": "Anterior",
+    "home": "Inicio",
+    "dashboard": "Panel",
+    "settings": "Configuración",
+    "help": "Ayuda",
+    "about": "Acerca de",
+    "contact": "Contacto",
+    "privacy": "Privacidad",
+    "terms": "Términos",
+    "date": "Fecha",
+    "time": "Hora",
+    "location": "Ubicación",
+    "description": "Descripción",
+    "title": "Título",
+    "name": "Nombre",
+    "email": "Email",
+    "phone": "Teléfono",
+    "address": "Dirección",
+    "city": "Ciudad",
+    "country": "País",
+    "language": "Idioma"
   }
 }
 
