--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -3,7 +3,7 @@
   "app": {
     "welcomeHeadlinePart1": "Your next",
     "welcomeHeadlineHighlight": "adventure",
-    "welcomeHeadlinePart2": "awaits you.",
+    "welcomeHeadlinePart2": "awaits.",
     "loginTitle": "Welcome to Rutopia",
     "loginSubtitle": "Continue with your Google account",
     "continueWithGoogle": "Continue with Google",
@@ -13,40 +13,292 @@
     "session": "Session",
     "country": "Country",
     "city": "City of origin",
-    "tastes": "Tastes (comma separated)",
-    "saveAndContinue": "Save and continue"
-  ,
+    "tastes": "Tastes (separated by commas)",
+    "saveAndContinue": "Save and continue",
     "email": "Email",
     "password": "Password",
     "signIn": "Sign in",
     "registerTitle": "Create your account",
     "noAccount": "Don't have an account?",
     "haveAccount": "Already have an account?",
-    "registerLink": "Register",
+    "registerLink": "Sign up",
     "loginLink": "Sign in",
-    "or": "OR",
+    "or": "Or",
     "createAccount": "Create Account"
-  }
-  ,
+  },
+  "navigation": {
+    "home": "Home",
+    "alerts": "Alerts",
+    "itinerary": "Itinerary",
+    "destinations": "Destinations",
+    "history": "History",
+    "profile": "My Profile",
+    "settings": "Settings",
+    "logout": "Logout"
+  },
   "login": {
     "title": "Welcome to Rutopia",
     "subtitle": "Sign in to continue",
     "emailLabel": "Email",
     "passwordLabel": "Password",
     "forgot": "Forgot your password?",
-    "signIn": "Sign in",
-    "or": "OR",
+    "signIn": "Sign In",
+    "or": "Or",
     "continueWithGoogle": "Continue with Google",
     "noAccount": "Don't have an account?",
-    "registerLink": "Register"
+    "registerLink": "Sign up"
   },
   "register": {
     "title": "Create your account",
-    "subtitle": "Join the community of travelers",
+    "subtitle": "Join the travelers community",
     "nameLabel": "Full Name",
     "createAccount": "Create Account",
     "haveAccount": "Already have an account?",
-    "loginLink": "Sign in"
+    "loginLink": "Sign In"
+  },
+  "home": {
+    "welcomeTitle": "Welcome to",
+    "welcomeHighlight": "Rutopia",
+    "welcomeSubtitle": "Your intelligent travel companion to explore the world safely and personally.",
+    "quickActionsTitle": "Quick Actions",
+    "planTrip": "Plan Trip",
+    "planTripDesc": "Create a personalized itinerary",
+    "checkAlerts": "Check Alerts",
+    "checkAlertsDesc": "Review safety alerts",
+    "exploreDestinations": "Explore Destinations",
+    "exploreDestinationsDesc": "Discover amazing places",
+    "myTripsTitle": "My Trips",
+    "upcomingTrip": "Upcoming Trip",
+    "currentTrip": "Current Trip",
+    "noTrips": "You have no planned trips",
+    "createFirstTrip": "Create my first trip",
+    "recentAlertsTitle": "Recent Alerts",
+    "viewAllAlerts": "View all alerts",
+    "noAlertsNearby": "No alerts near your location",
+    "travelTipsTitle": "Travel Tips",
+    "tip1": "Always keep a digital copy of your documents",
+    "tip2": "Check local alerts before going out",
+    "tip3": "Share your itinerary with family",
+    "footer": "All rights reserved"
+  },
+  "alerts": {
+    "title": "Security",
+    "titleHighlight": "Alerts",
+    "subtitle": "Stay informed about areas with traffic problems, natural phenomena or security situations in real time.",
+    "notificationSettings": "Notification Settings",
+    "notificationDesc": "Turn alerts on or off according to your preferences",
+    "notifications": "Notifications",
+    "traffic": "Traffic",
+    "trafficDesc": "Alerts about traffic jams and accidents",
+    "naturalPhenomena": "Natural Phenomena",
+    "naturalDesc": "Alerts about earthquakes, hurricanes, etc.",
+    "security": "Security",
+    "securityDesc": "Alerts about risk areas",
+    "active": "Active",
+    "inactive": "Inactive",
+    "recentAlertsTitle": "Recent Alerts",
+    "mapTitle": "Alert Zones Map",
+    "filterAlerts": "Filter Alerts",
+    "trafficFilter": "🚗 Traffic",
+    "naturalFilter": "🌊 Natural Phenomena",
+    "securityFilter": "⚠️ Security",
+    "myLocation": "Go to my location",
+    "severityLegend": "Color Legend by Severity",
+    "high": "High - Critical",
+    "medium": "Medium - Moderate",
+    "low": "Low - Minor",
+    "trafficInfo": "Traffic jams, accidents and road closures",
+    "naturalInfo": "Earthquakes, heavy rains and floods",
+    "securityInfo": "Risk areas and suspicious activity",
+    "createAlert": "Create New Alert",
+    "alertTitle": "Title",
+    "alertDescription": "Description",
+    "alertType": "Alert Type",
+    "alertSeverity": "Severity",
+    "alertLocation": "Location",
+    "coordinates": "Coordinates",
+    "address": "Address (optional)",
+    "cancel": "Cancel",
+    "create": "Create Alert",
+    "edit": "Edit",
+    "delete": "Delete",
+    "save": "Save",
+    "confirmDelete": "Are you sure you want to delete this alert?",
+    "yes": "Yes",
+    "no": "No"
+  },
+  "itinerary": {
+    "title": "My",
+    "titleHighlight": "Itinerary",
+    "subtitle": "Plan your perfect trip with personalized recommendations and real-time alerts.",
+    "currentTrip": "Current Trip",
+    "upcomingTrips": "Upcoming Trips",
+    "noCurrentTrip": "You don't have an active trip",
+    "startPlanning": "Start planning",
+    "createItinerary": "Create New Itinerary",
+    "tripName": "Trip Name",
+    "destination": "Destination",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "travelers": "Number of Travelers",
+    "budget": "Budget",
+    "interests": "Interests",
+    "createTrip": "Create Trip",
+    "editTrip": "Edit Trip",
+    "deleteTrip": "Delete Trip",
+    "tripDetails": "Trip Details",
+    "addActivity": "Add Activity",
+    "activities": "Activities",
+    "day": "Day",
+    "time": "Time",
+    "activity": "Activity",
+    "location": "Location",
+    "notes": "Notes",
+    "status": "Status",
+    "pending": "Pending",
+    "completed": "Completed",
+    "cancelled": "Cancelled"
+  },
+  "recommendations": {
+    "title": "Recommended",
+    "titleHighlight": "Destinations",
+    "subtitle": "Discover amazing places based on your preferences and other travelers' experiences.",
+    "popularDestinations": "Popular Destinations",
+    "personalizedForYou": "Personalized for You",
+    "trendingNow": "Trending Now",
+    "exploreAll": "Explore All",
+    "basedOnPreferences": "Based on your preferences",
+    "rating": "Rating",
+    "reviews": "reviews",
+    "startingFrom": "Starting from",
+    "viewDetails": "View Details",
+    "addToItinerary": "Add to Itinerary",
+    "filterBy": "Filter by",
+    "all": "All",
+    "adventure": "Adventure",
+    "culture": "Culture",
+    "relaxation": "Relaxation",
+    "nature": "Nature",
+    "food": "Food",
+    "sortBy": "Sort by",
+    "popularity": "Popularity",
+    "price": "Price",
+    "destination": "Destination",
+    "duration": "Duration",
+    "difficulty": "Difficulty",
+    "easy": "Easy",
+    "moderate": "Moderate",
+    "challenging": "Challenging"
+  },
+  "history": {
+    "title": "My",
+    "titleHighlight": "History",
+    "subtitle": "Relive your past adventures and keep track of all your trips.",
+    "completedTrips": "Completed Trips",
+    "totalTrips": "Total Trips",
+    "countriesVisited": "Countries Visited",
+    "totalDistance": "Total Distance",
+    "favoriteDestination": "Favorite Destination",
+    "noTripsYet": "You haven't completed any trips yet",
+    "startExploring": "Start exploring",
+    "tripMemories": "Trip Memories",
+    "photos": "Photos",
+    "reviews": "Reviews",
+    "expenses": "Expenses",
+    "shareTrip": "Share Trip",
+    "downloadReport": "Download Report",
+    "tripDuration": "Trip Duration",
+    "days": "days",
+    "viewTrip": "View Trip",
+    "addReview": "Add Review",
+    "editReview": "Edit Review",
+    "rating": "Rating",
+    "comment": "Comment",
+    "submit": "Submit",
+    "tripStats": "Trip Statistics",
+    "achievements": "Achievements",
+    "firstTrip": "First Trip",
+    "adventurer": "Adventurer",
+    "explorer": "Explorer",
+    "globetrotter": "Globetrotter"
+  },
+  "profile": {
+    "title": "My Profile",
+    "personalInfo": "Personal Information",
+    "preferences": "Preferences",
+    "security": "Security",
+    "notifications": "Notifications",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "birthdate": "Birthdate",
+    "country": "Country",
+    "city": "City",
+    "bio": "Biography",
+    "interests": "Interests",
+    "languages": "Languages",
+    "travelStyle": "Travel Style",
+    "budget": "Preferred Budget",
+    "accommodation": "Preferred Accommodation",
+    "transportation": "Preferred Transportation",
+    "changePassword": "Change Password",
+    "currentPassword": "Current Password",
+    "newPassword": "New Password",
+    "confirmPassword": "Confirm Password",
+    "save": "Save",
+    "cancel": "Cancel",
+    "edit": "Edit",
+    "emailNotifications": "Email Notifications",
+    "pushNotifications": "Push Notifications",
+    "smsNotifications": "SMS Notifications",
+    "profilePicture": "Profile Picture",
+    "uploadPhoto": "Upload Photo",
+    "removePhoto": "Remove Photo"
+  },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "warning": "Warning",
+    "info": "Information",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "create": "Create",
+    "update": "Update",
+    "search": "Search",
+    "filter": "Filter",
+    "sort": "Sort",
+    "close": "Close",
+    "open": "Open",
+    "yes": "Yes",
+    "no": "No",
+    "ok": "OK",
+    "back": "Back",
+    "next": "Next",
+    "previous": "Previous",
+    "home": "Home",
+    "dashboard": "Dashboard",
+    "settings": "Settings",
+    "help": "Help",
+    "about": "About",
+    "contact": "Contact",
+    "privacy": "Privacy",
+    "terms": "Terms",
+    "date": "Date",
+    "time": "Time",
+    "location": "Location",
+    "description": "Description",
+    "title": "Title",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "city": "City",
+    "country": "Country",
+    "language": "Language"
   }
 }
 
