--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -193,7 +193,36 @@
   "history": {
     "title": "My",
     "titleHighlight": "History",
-    "subtitle": "Relive your past adventures and keep track of all your trips.",
+    "subtitle": "Review all the places you've visited and keep a complete record of your adventures",
+    "visitedLocations": "Visited Locations",
+    "differentCities": "Different Cities",
+    "visitedCountries": "Visited Countries",
+    "lastVisit": "Last Visit",
+    "searchPlaceholder": "Search by name or address...",
+    "allCities": "All cities",
+    "allCountries": "All countries",
+    "clearFilters": "Clear",
+    "visitedLocationsTitle": "Visited Locations",
+    "showingLocations": "Showing 0 locations",
+    "addLocation": "Add Location",
+    "noLocations": "No locations recorded",
+    "addFirstLocation": "Add your first visited location",
+    "addNewLocation": "Add New Location",
+    "placeName": "Place Name",
+    "placeNamePlaceholder": "E.g: Eiffel Tower",
+    "city": "City",
+    "cityPlaceholder": "E.g: Paris",
+    "country": "Country",
+    "countryPlaceholder": "E.g: France",
+    "visitDate": "Visit Date",
+    "fullAddress": "Full Address",
+    "addressPlaceholder": "E.g: Champ de Mars, 5 Avenue Anatole France, 75007 Paris",
+    "photoUrl": "Photo URL",
+    "photoUrlPlaceholder": "https://example.com/photo.jpg",
+    "description": "Description",
+    "descriptionPlaceholder": "Describe your experience, what you liked, etc.",
+    "cancel": "Cancel",
+    "addLocationButton": "Add Location",
     "completedTrips": "Completed Trips",
     "totalTrips": "Total Trips",
     "countriesVisited": "Countries Visited",
@@ -223,6 +252,7 @@
     "globetrotter": "Globetrotter"
   },
   "profile": {
+    "pageTitle": "My Profile - Rutopia",
     "title": "My Profile",
     "personalInfo": "Personal Information",
     "preferences": "Preferences",
@@ -235,7 +265,7 @@
     "country": "Country",
     "city": "City",
     "bio": "Biography",
-    "interests": "Interests",
+    "interests": "Places of interest",
     "languages": "Languages",
     "travelStyle": "Travel Style",
     "budget": "Preferred Budget",
@@ -247,13 +277,27 @@
     "confirmPassword": "Confirm Password",
     "save": "Save",
     "cancel": "Cancel",
-    "edit": "Edit",
-    "emailNotifications": "Email Notifications",
-    "pushNotifications": "Push Notifications",
-    "smsNotifications": "SMS Notifications",
-    "profilePicture": "Profile Picture",
-    "uploadPhoto": "Upload Photo",
-    "removePhoto": "Remove Photo"
+    "stayType": "Favorite accommodation type",
+    "hotel": "Hotel",
+    "hostel": "Hostel",
+    "cabin": "Cabin",
+    "apartment": "Apartment",
+    "resort": "Resort",
+    "preferredLocation": "Preferred location",
+    "mountain": "Mountain",
+    "beach": "Beach",
+    "countryside": "Countryside",
+    "interestsPlaceholder": "e.g: museums, hiking, food",
+    "interestsHelp": "Use commas to separate multiple interests.",
+    "travelCompany": "Travel company",
+    "solo": "Solo",
+    "couple": "Couple",
+    "family": "Family",
+    "friends": "Friends",
+    "group": "Group",
+    "preferenceTags": "Preference tags",
+    "addTag": "Add tag",
+    "savePreferences": "Save preferences"
   },
   "common": {
     "loading": "Loading...",
@@ -298,7 +342,15 @@
     "address": "Address",
     "city": "City",
     "country": "Country",
-    "language": "Language"
+    "language": "Language",
+    "viewAll": "View All",
+    "showMore": "Show More",
+    "showLess": "Show Less",
+    "refresh": "Refresh",
+    "retry": "Retry"
+  },
+  "footer": {
+    "copyright": "© 2025 Rutopia. All rights reserved."
   }
 }
 
