--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -160,6 +160,21 @@
     "cancelled": "Cancelado"
   },
   "recommendations": {
+    "pageTitle": "Recomendaciones de Destinos - Rutopia",
+    "discoverTitle": "Descubre",
+    "destinationsTitle": "Destinos",
+    "incredibleTitle": "Increíbles",
+    "subtitle": "Explora los destinos más populares del mundo y sus actividades más representativas. Guarda tus favoritos y planifica tu próxima aventura.",
+    "filterBy": "Filtrar por:",
+    "all": "Todos",
+    "europe": "Europa",
+    "asia": "Asia",
+    "americas": "Américas",
+    "africa": "África",
+    "oceania": "Oceanía",
+    "savedDestinations": "Mis Destinos Guardados",
+    "noSavedDestinations": "No tienes destinos guardados",
+    "saveFavorites": "Guarda tus destinos favoritos para verlos aquí",
     "title": "Destinos",
     "titleHighlight": "Recomendados",
     "subtitle": "Descubre lugares increíbles basados en tus preferencias y experiencias de otros viajeros.",
@@ -174,12 +189,6 @@
     "viewDetails": "Ver Detalles",
     "addToItinerary": "Agregar al Itinerario",
     "filterBy": "Filtrar por",
-    "all": "Todos",
-    "adventure": "Aventura",
-    "culture": "Cultura",
-    "relaxation": "Relajación",
-    "nature": "Naturaleza",
-    "food": "Gastronomía",
     "sortBy": "Ordenar por",
     "popularity": "Popularidad",
     "price": "Precio",
@@ -193,7 +202,36 @@
   "history": {
     "title": "Mi",
     "titleHighlight": "Historial",
-    "subtitle": "Revive tus aventuras pasadas y lleva un registro de todos tus viajes.",
+    "subtitle": "Revisa todos los lugares que has visitado y mantén un registro completo de tus aventuras",
+    "visitedLocations": "Ubicaciones Visitadas",
+    "differentCities": "Ciudades Diferentes",
+    "visitedCountries": "Países Visitados",
+    "lastVisit": "Última Visita",
+    "searchPlaceholder": "Buscar por nombre o dirección...",
+    "allCities": "Todas las ciudades",
+    "allCountries": "Todos los países",
+    "clearFilters": "Limpiar",
+    "visitedLocationsTitle": "Ubicaciones Visitadas",
+    "showingLocations": "Mostrando 0 ubicaciones",
+    "addLocation": "Agregar Ubicación",
+    "noLocations": "No hay ubicaciones registradas",
+    "addFirstLocation": "Agrega tu primera ubicación visitada",
+    "addNewLocation": "Agregar Nueva Ubicación",
+    "placeName": "Nombre del Lugar",
+    "placeNamePlaceholder": "Ej: Torre Eiffel",
+    "city": "Ciudad",
+    "cityPlaceholder": "Ej: París",
+    "country": "País",
+    "countryPlaceholder": "Ej: Francia",
+    "visitDate": "Fecha de Visita",
+    "fullAddress": "Dirección Completa",
+    "addressPlaceholder": "Ej: Champ de Mars, 5 Avenue Anatole France, 75007 París",
+    "photoUrl": "URL de la Foto",
+    "photoUrlPlaceholder": "https://ejemplo.com/foto.jpg",
+    "description": "Descripción",
+    "descriptionPlaceholder": "Describe tu experiencia, qué te gustó, etc.",
+    "cancel": "Cancelar",
+    "addLocationButton": "Agregar Ubicación",
     "completedTrips": "Viajes Completados",
     "totalTrips": "Total de Viajes",
     "countriesVisited": "Países Visitados",
@@ -223,6 +261,7 @@
     "globetrotter": "Trotamundos"
   },
   "profile": {
+    "pageTitle": "Mi Perfil - Rutopia",
     "title": "Mi Perfil",
     "personalInfo": "Información Personal",
     "preferences": "Preferencias",
@@ -235,7 +274,7 @@
     "country": "País",
     "city": "Ciudad",
     "bio": "Biografía",
-    "interests": "Intereses",
+    "interests": "Lugares de interés",
     "languages": "Idiomas",
     "travelStyle": "Estilo de Viaje",
     "budget": "Presupuesto Preferido",
@@ -247,13 +286,27 @@
     "confirmPassword": "Confirmar Contraseña",
     "save": "Guardar",
     "cancel": "Cancelar",
-    "edit": "Editar",
-    "emailNotifications": "Notificaciones por Email",
-    "pushNotifications": "Notificaciones Push",
-    "smsNotifications": "Notificaciones SMS",
-    "profilePicture": "Foto de Perfil",
-    "uploadPhoto": "Subir Foto",
-    "removePhoto": "Eliminar Foto"
+    "stayType": "Tipo de hospedaje favorito",
+    "hotel": "Hotel",
+    "hostel": "Hostal",
+    "cabin": "Cabaña",
+    "apartment": "Departamento",
+    "resort": "Resort",
+    "preferredLocation": "Ubicación preferida",
+    "mountain": "Montaña",
+    "beach": "Playa",
+    "countryside": "Campo",
+    "interestsPlaceholder": "Ej: museos, hiking, comida",
+    "interestsHelp": "Usa comas para separar múltiples intereses.",
+    "travelCompany": "Compañía de viaje",
+    "solo": "Solo",
+    "couple": "Pareja",
+    "family": "Familia",
+    "friends": "Amigos",
+    "group": "Grupo",
+    "preferenceTags": "Etiquetas de preferencias",
+    "addTag": "Añadir etiqueta",
+    "savePreferences": "Guardar preferencias"
   },
   "common": {
     "loading": "Cargando...",
@@ -298,7 +351,15 @@
     "address": "Dirección",
     "city": "Ciudad",
     "country": "País",
-    "language": "Idioma"
+    "language": "Idioma",
+    "viewAll": "Ver Todo",
+    "showMore": "Mostrar Más",
+    "showLess": "Mostrar Menos",
+    "refresh": "Actualizar",
+    "retry": "Reintentar"
+  },
+  "footer": {
+    "copyright": "© 2025 Rutopia. Todos los derechos reservados."
   }
 }
 
